[package]
name = "sound_keys"
version = "0.1.0"
authors = ["Igor Valet <igor_valet@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
input-linux = "0"
rodio = "0"

[dependencies.tokio]
version = "0.3"

features = ["macros", "sync", "rt"]
